# conway

./: CMakeLists.txt  README.md  gosper-glider-gun.csv  input.csv  main.cpp
lifegrid/: CMakeLists.txt  Cell.cpp  Cell.h  LifeGrid.cpp  LifeGrid.h
lifegrid_loader/: CMakeLists.txt  Loader.cpp  Loader.h
lifegrid_output/: CMakeLists.txt  Output.cpp  Output.h
lifegrid_tests/: CMakeLists.txt
lifegrid_tests/unit_tests/: CMakeLists.txt  testCell.cpp  testLifeGrid.cpp  testLoader.cpp
